--- a/ruoyi-admin/src/main/resources/static/css/login.css
+++ b/ruoyi-admin/src/main/resources/static/css/login.css
@@ -1,147 +1,211 @@
-html {
-	height:100%
-}
-body.signin {
-	height:auto;
+body{
+	overflow:hidden;
 	background:url(../img/login-background.jpg) no-repeat center fixed;
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
-	-o-background-size:cover;
 	background-size:cover;
-	color:rgba(255,255,255,.95)
+    width:100%;
+    height:100%; 
 }
-.signinpanel {
-	width:750px;
-	margin:10% auto 0
-}
-.signinpanel .logopanel {
-	float:none;
-	width:auto;
-	padding:0;
-	background:0 0
-}
-.signinpanel .signin-info ul {
-	list-style:none;
-	padding:0;
-	margin:20px 0
-}
-.signinpanel .form-control {
-	display:block;
-	margin-top:15px
-}
-.signinpanel .uname {
-	background:#fff url(../img/user.png) no-repeat 95% center;
-	color:#333
-}
-.signinpanel .pword {
-	background:#fff url(../img/locked.png) no-repeat 95% center;
-	color:#333
-}
-.signinpanel .code {
-    background: #fff no-repeat 95% center;color:#333; margin:0 0 15px 0;
-}
-.signinpanel .btn {
-	margin-top:15px
-}
-.signinpanel form {
-	background:rgba(255,255,255,.2);
-	border:1px solid rgba(255,255,255,.3);
-	-moz-box-shadow:0 3px 0 rgba(12,12,12,.03);
-	-webkit-box-shadow:0 3px 0 rgba(12,12,12,.03);
-	box-shadow:0 3px 0 rgba(12,12,12,.03);
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
-	border-radius:3px;
-	padding:30px
-}
-.signup-footer {
-	border-top:solid 1px rgba(255,255,255,.3);
-	margin:20px 0;
-	padding-top:15px
-}
-@media screen and (max-width:768px) {
-	.signinpanel,.signuppanel {
-	margin:0 auto;
-	width:420px!important;
-	padding:20px
-}
-.signinpanel form {
-	margin-top:20px
-}
-.signup-footer,.signuppanel .form-control {
-	margin-bottom:10px
-}
-.signup-footer .pull-left,.signup-footer .pull-right {
-	float:none!important;
-	text-align:center
-}
-.signinpanel .signin-info ul {
-	display:none
-}
-}@media screen and (max-width:320px) {
-	.signinpanel,.signuppanel {
-	margin:0 20px;
-	width:auto
-}
-}
-/*
-登录界面check样式
-*/
-.checkbox-custom {
+
+/*灰色遮罩板*/
+.mainContainer{
+	height: 100%;
+    width: 35%;
+    background-color: rgba(58, 64, 90, 0.45);
     position: relative;
-    padding: 0 15px 0 25px;
-    margin-bottom: 7px;
-    display: inline-block;
+    margin-left: 31.3%;
 }
-/*
-将初始的checkbox的样式改变
-*/
-.checkbox-custom input[type="checkbox"] {
-    opacity: 0; /*将初始的checkbox隐藏起来*/
+
+/*三段式页面布局*/
+.topContainer{
+	height: 33%;
+    width: 100%;
+}
+.middleContainer{
+	height: 57%;
+    width: 100%;
+}
+.bottomContainer{
+	height: 10%;
+    width: 100%;
+}
+
+
+/*------顶部内容-------*/
+.topContent{
+	position: relative;
+    width: 100%;
+    top: 40%;
+    text-align: center;
+    /* border:1px solid red; */
+}
+ .logo{
+	width: 120px;
+    height: 50px;
+    background-image: url(../img/logo.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    left: calc(50% - 60px);
+    position: relative;
+} 
+.platformName_cn{
+    font-size: 20px;
+    font-weight: bolder;
+    color: white;
+    position: relative;
+    margin-top: 20px;
+}
+.platformName_en{
+    font-size: 13px;
+    font-weight: bolder;
+    color: white;
+    position: relative;
+}
+/*-------------------*/
+
+
+/*------中部内容------*/
+.middleContent{
+	position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    /* border:1px solid yellow; */
+}
+.user_login_txt{
+	font-size: 18px;
+    color: white;
+    text-shadow: 0px 3px 2px #666;
+    -webkit-text-shadow: 0px 3px 2px #333;
+    -moz-text-shadow: 0px 3px 2px #333;
+    position: relative;
+    padding-top: 10px;
+}
+.login_div {
+  	width: 100%;
+    position: relative;
+}
+.login_row{
+	width: 50%;
+    position: relative;
+    height: 40px;
+    background-color: white;
+    overflow: hidden;
+    left: calc(50% - 25%);
+    margin-top: 20px;
+}
+.input-icon {
+	position: relative;
+    display: block;
+    left: 10px;
+    float: left;
+    line-height: 40px;
+    color: #858585;
+    font-weight: bold;
+    font-size: 22px;
+}
+.myInput {
+	position: relative;
+    outline: none;
+    margin-left: 10px;
+    height: 40px;
+    width: calc(100% - 60px);
+    color: #5f5c5c!important;
+    font-size: 15px;
+    border: none;
+}
+input {
+    background-color: white!important;
+}
+input:-webkit-autofill{ 
+	box-shadow: 0 0 0px 1000px white inset !important;
+}
+#validimg{
+	width: 90px;
+    height: 30px;
     position: absolute;
+    right: 1%;
+    top: calc(50% - 14px);
+}
+.submitDiv{
+	background-color: #17C361;
+	cursor: pointer;
+}
+.submitDiv:hover{
+	background-color: #13a552;
+}
+.submitDiv:active{
+	background-color: #13a552;
+}
+.login_txt {
+    position: relative;
+    font-size: 18px;
+    line-height: 40px;
     cursor: pointer;
-    z-index: 2;
-    margin: -6px 0 0 0;
-    top: 50%;
-    left: 3px;
+    color: white;
 }
-/*
-设计新的checkbox，位置
-*/
-.checkbox-custom label:before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 0;
-    margin-top: -9px;
-    width: 18px;
-    height: 17px;
-    display: inline-block;
-    border-radius: 2px;
-    border: 1px solid #bbb;
-    background: #fff;
+/*-------------------*/
+
+
+/*------底部内容------*/
+.bottomContent{
+	position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding-top: 35px;
 }
-/*
-点击初始的checkbox，将新的checkbox关联起来
-*/
-.checkbox-custom input[type="checkbox"]:checked +label:after {
-    position: absolute;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    content: "\e013";
-    top: 42%;
-    left: 3px;
-    margin-top: -5px;
-    font-size: 11px;
-    line-height: 1;
-    width: 16px;
-    height: 16px;
-    color: #333;
+.mb1{
+	font-size: 16px;
+    margin-top: 3px;
+    color: white;
 }
-.checkbox-custom label {
-    cursor: pointer;
-    line-height: 1.2;
-    font-weight: normal; /*改变了rememberme的字体*/
-    margin-bottom: 0;
-    text-align: left;
+.copyright{
+	font-size: 15px;
 }
+
+/*-------------------*/
+
+/*------登录动画------*/
+.lgload-container {
+    text-align: center;
+    display: none;
+    height: 100%;
+    line-height: 50px;
+}
+
+.load {
+	width: 20px;
+	height: 20px;
+	background-color: white;	
+	border-radius: 100%;
+	display: inline-block;
+	-webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+	animation: bouncedelay 1.4s infinite ease-in-out;
+	/* Prevent first frame from flickering when animation starts */
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+.load1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+.load2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+@-webkit-keyframes bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0.0) }
+  40% { -webkit-transform: scale(0.7) }
+}
+
+@keyframes bouncedelay {
+  0%, 80%, 100% {
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 40% {
+    transform: scale(0.7);
+    -webkit-transform: scale(0.7);
+  }
+}
+/*-------------------*/
