--- a/ruoyi-admin/src/main/resources/templates/login.html
+++ b/ruoyi-admin/src/main/resources/templates/login.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <title>登录若依系统</title>
-    <meta name="description" content="若依后台管理框架">
+    <title>岩土助手后台管理系统</title>
+    <meta name="description" content="岩土助手后台管理系统">
     <link href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
     <link href="../static/css/font-awesome.min.css" th:href="@{/css/font-awesome.min.css}" rel="stylesheet"/>
     <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet"/>
-    <link href="../static/css/login.min.css" th:href="@{/css/login.min.css}" rel="stylesheet"/>
+    <link href="../static/css/iconfont.css" th:href="@{/css/iconfont.css}" rel="stylesheet"/>
+    <link href="../static/css/login.css" th:href="@{/css/login.css}" rel="stylesheet"/>
     <link href="../static/ruoyi/css/ry-ui.css" th:href="@{/ruoyi/css/ry-ui.css?v=3.4.0}" rel="stylesheet"/>
     <!--[if lt IE 9]>
     <meta http-equiv="refresh" content="0;ie.html" />
@@ -21,56 +22,55 @@
     </script>
 </head>
 
-<body class="signin">
+<body>
 
-    <div class="signinpanel">
-        <div class="row">
-            <div class="col-sm-7">
-                <div class="signin-info">
-                    <div class="logopanel m-b">
-                        <h1><img alt="[ 若依 ]" src="../static/ruoyi.png" th:src="@{/ruoyi.png}"></h1>
-                    </div>
-                    <div class="m-b"></div>
-                    <h4>欢迎使用 <strong>若依 后台管理系统</strong></h4>
-                    <ul class="m-b">
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> SpringBoot</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Mybatis</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Shiro</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Thymeleaf</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Bootstrap</li>
-                    </ul>
-                    <strong>还没有账号？ <a href="#">立即注册&raquo;</a></strong>
-                </div>
-            </div>
-            <div class="col-sm-5">
-                <form id="signupForm">
-                    <h4 class="no-margins">登录：</h4>
-                    <p class="m-t-md">你若不离不弃，我必生死相依</p>
-                    <input type="text"     name="username" class="form-control uname"     placeholder="用户名" value="admin"    />
-                    <input type="password" name="password" class="form-control pword"     placeholder="密码"   value="admin123" />
-					<div class="row m-t" th:if="${captchaEnabled==true}">
-						<div class="col-xs-6">
-						    <input type="text" name="validateCode" class="form-control code" placeholder="验证码" maxlength="5" autocomplete="off">
-						</div>
-						<div class="col-xs-6">
-							<a href="javascript:void(0);" title="点击更换验证码">
-								<img th:src="@{captcha/captchaImage(type=${captchaType})}" class="imgcode" width="85%"/>
-							</a>
-						</div>
-					</div>
-                    <div class="checkbox-custom" th:classappend="${captchaEnabled==false} ? 'm-t'">
-				        <input type="checkbox" id="rememberme" name="rememberme"> <label for="rememberme">记住我</label>
-				    </div>
-                    <button class="btn btn-success btn-block" id="btnSubmit" data-loading="正在验证登录，请稍后...">登录</button>
-                </form>
-            </div>
-        </div>
-        <div class="signup-footer">
-            <div class="pull-left">
-                &copy; 2019 All Rights Reserved. RuoYi <br>
-            </div>
-        </div>
-    </div>
+	<div class="mainContainer">
+		<div class="topContainer">
+			<div class="topContent">
+				 <div class="logo"></div>
+				<div class="platformName_cn">岩土工程助手后台管理系统</div>
+				<div class="platformName_en">GEO Fellow Management System</div> 
+			</div>
+		</div>
+		
+		<div class="middleContainer">
+			<div class="middleContent">
+				<div class="user_login_txt">用户登录</div>
+				<div class="login_div">
+					 <div class="login_row">
+                         <div class="iconfont icongeren input-icon"></div>
+                         <input type="text" id="account" name="account" class="myInput" placeholder="请输入用户名"/>                              
+                     </div>
+                     <div class="login_row">
+                         <div class="iconfont iconmima input-icon"></div>
+	                   	 <input type="password" id="pwd" name="pwd" class="myInput" placeholder="请输入密码"/>                         
+                     </div>
+                     <div class="login_row">
+                         <div class="iconfont iconyanzhengma input-icon"></div>
+	                     <input type="text" id="validcode" name="valiCode" class="myInput" placeholder="请输入验证码"/> 
+	                     <!-- <img src="" alt="验证码" id="validimg"/>  -->
+	                     <img th:src="@{captcha/captchaImage(type=${captchaType})}" class="imgcode" id="validimg"/>                          
+                     </div>
+                     <div id="submitBtn" class="login_row submitDiv">
+                     	<label class="login_txt">登 录</label> 
+                     	<div class="lgload-container">
+					      <div class="load load1"></div>
+					      <div class="load load2"></div>
+					      <div class="load"></div>
+					  	</div>
+                     </div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="bottomContainer">
+			<div class="bottomContent">
+	        	<p class='mb1'><span class="copyright">&#169;</span>岩土工程助手责任有限公司 版权所有</p>
+			</div>
+		</div>
+		
+	</div>
+		
 <script th:inline="javascript"> var ctx = [[@{/}]]; var captchaType = [[${captchaType}]]; </script>
 <!-- 全局js -->
 <script src="../static/js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
